--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "javascript-state-machine": "^3.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0"
   },
   "eslintConfig": {
     "root": true,
