--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.8"
+    "vue-router": "^3.4.8",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
